# tipping-links

client/: package-lock.json  package.json  tailwind.config.ts
client/src/app/: page.tsx
client/src/components/LandingPage/: index.tsx
client/src/components/Navbar/: index.tsx
client/src/components/ui/NavbarMenu/: index.tsx
sol_pda_transfer/: Anchor.toml
sol_pda_transfer/programs/sol_pda_transfer/: Cargo.toml
sol_pda_transfer/programs/sol_pda_transfer/src/: lib.rs
sol_pda_transfer/tests/: sol_pda_transfer.ts
